// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageTitle /> renders a H1 page title 1`] = `
<div>
  <header
    class="sc-gswNZR gvmDjE"
  >
    <h1
      class="sc-hLBbgP iQrzxW"
    >
      <span
        class="sc-bcXHqe eafpDT"
      />
      Lorem Ipsum
    </h1>
  </header>
</div>
`;

exports[`<PageTitle /> renders a left striped shifted H1 page title 1`] = `
<div>
  <header
    class="sc-gswNZR gvmDjE"
  >
    <h1
      class="sc-hLBbgP jMohai"
    >
      <span
        class="sc-bcXHqe ebNMxn"
      />
      Lorem Ipsum
    </h1>
  </header>
</div>
`;
